[package]
name = "syncify"
version = "0.1.0"
edition = "2021"
description = "A simple macro for writing async functions once and getting both the async version and a sync version that strips all async function modifiers and all .await suffixes."
repository = "https://github.com/worm-blossom/syncify"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"

[dependencies.syn]
version = "2.0.72"
features = ["visit-mut", "full"]